// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders consistently 1`] = `
.c0 {
  display: grid;
  grid-template-columns: auto auto auto 1fr;
  grid-template-areas: 'leadingAction titleArea trailingAction actions';
  gap: var(--stack-gap-condensed,0.5rem);
}

.c1 {
  grid-row: 1;
  grid-area: contextArea;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c2 {
  grid-row: 2;
  grid-area: titleArea;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  grid-row: 3;
  grid-area: description;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c4 {
  grid-row: 4;
  grid-area: navigation;
  display: block;
}

@media screen and (max-width:calc(768px - 0.02px)) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: none;
  }
}

<div
  className="c0"
  data-component="pageheader"
>
  <div
    className="c1"
    data-component="contextArea"
  />
  <div
    className="c2"
    data-component="titleArea"
  />
  <div
    className="c3"
    data-component="description"
  />
  <div
    className="c4"
    data-component="navigation"
  />
</div>
`;

exports[`PageHeader renders default layout 1`] = `
.c1 {
  grid-row: 1;
  grid-area: contextArea;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c2 {
  grid-row: 2;
  grid-area: titleArea;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  grid-row: 3;
  grid-area: description;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c4 {
  grid-row: 4;
  grid-area: navigation;
  display: block;
}

.c0 {
  display: grid;
  grid-template-columns: auto auto auto 1fr;
  gap: var(--stack-gap-condensed,0.5rem);
}

@media screen and (max-width:calc(768px - 0.02px)) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: none;
  }
}

<div>
  <div
    class="c0"
    data-component="pageheader"
  >
    <div
      class="c1"
      data-component="contextArea"
    >
      ContextArea
    </div>
    <div
      class="c2"
      data-component="titleArea"
    >
      TitleArea
    </div>
    <div
      class="c3"
      data-component="description"
    >
      Description
    </div>
    <div
      class="c4"
      data-component="navigation"
    >
      Navigation
    </div>
  </div>
</div>
`;
